chat bubble resolve

--- a/chat/index.html
+++ b/chat/index.html
@@ -1,25 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Chat bubbles</title>
-	<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Chat bubbles</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-	<div class="chat">
-		<div class="caption"></div>
-		<div class="body">
-			<div class="message client">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
-			<div class="message operator">Perspiciatis praesentium hic modi, sint quae voluptate explicabo, quasi officiis tempora molestias numquam.</div>
-			<div class="message operator">labore sit magnam aliquam optio illum facere non natus</div>
-			<div class="message operator">Lorem ipsum dolor sit amet, consectetur adipisicing elit</div>
-			<div class="message client">Perspiciatis praesentium hic modi, sint quae voluptate explicabo</div>
-			<div class="message operator">quasi officiis tempora molestias numquam</div>
-			<div class="message client">Perspiciatis praesentium hic modi, sint quae voluptate explicabo, quasi officiis tempora molestias numquam.</div>
-			<div class="message operator">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
-			<div class="message operator">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ratione, culpa! Assumenda omnis, ea dolores, obcaecati corporis facere architecto quibusdam facilis, aspernatur soluta accusantium reprehenderit odit. Ipsum porro, unde numquam?</div>
-		</div>
-		<div class="footer"></div>
-	</div>
+    <div class="chat">
+        <div class="caption"></div>
+        <div class="body">
+            <ul class="client">
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+            </ul>
+            <div>
+                <div class="avatar"></div>
+                <ul class="operator">
+                    <li>Perspiciatis praesentium hic modi, sint quae voluptate explicabo, quasi officiis tempora molestias numquam.</li>
+                    <li>labore sit magnam aliquam optio illum facere non natus</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit</li>
+                </ul>
+            </div>
+            <ul class="client">
+                <li>Perspiciatis praesentium hic modi, sint quae voluptate explicabo</li>
+            </ul>
+            <div>
+                <div class="avatar"></div>
+                <ul class="operator">
+                    <li>quasi officiis tempora molestias numquam</li>
+                </ul>
+            </div>
+            <ul class="client">
+                <li>Perspiciatis praesentium hic modi, sint quae voluptate explicabo, quasi officiis tempora molestias numquam.</li>
+            </ul>
+            <div>
+                <div class="avatar"></div>
+                <ul class="operator">
+                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ratione, culpa! Assumenda omnis, ea dolores, obcaecati corporis facere architecto quibusdam facilis, aspernatur soluta accusantium reprehenderit odit. Ipsum porro, unde numquam?</li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer"></div>
+    </div>
 </body>
+
 </html>
