--- a/lesson10/lesson10.html
+++ b/lesson10/lesson10.html
@@ -15,21 +15,22 @@
             </div>
             <ul class="menu">
                 <li>
-                    <a href="feature.html">1 feature</a>
+                    <a href="feature.html">feature</a>
                 </li>
                 <li>
-                    <a href="works.html">2 works</a>
+                    <a href="works.html">works</a>
                 </li>
                 <li>
-                    <a href="team.html">3 our team</a>
+                    <a href="team.html">our team</a>
                 </li>
                 <li>
-                    <a href="testimonials.html">4 testimonials</a>
+                    <a href="testimonials.html">testimonials</a>
                 </li>
-                <li><a href="download.html">5 download</a>
+                <li><a href="download.html">download</a>
                 </li>
             </ul>
         </div>
+    </header>
         <div class="promo">
           <div>
             <h1>You favorite one page multi purpose template</h1>
@@ -37,36 +38,35 @@
             <button>Find out more</button>
             </div>
         </div>
-    </header>
     <section class="mcent">
         <div>
             <img src="https://lteplova.github.io/netology_lessons/assets/img/icon1.png" alt="Иконка раздела1">
-            <h2>1 Easily Customised</h2>
+            <h2>Easily Customised</h2>
             <p>Car justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis eget urna mollis ornare vel eu leo. Donec ullamcorper nulla</p>
         </div>
         <div>
             <img src="https://lteplova.github.io/netology_lessons/assets/img/icon1.png" alt="Иконка раздела2">
-            <h2>2 Easily Customised</h2>
+            <h2>Easily Customised</h2>
             <p>Car justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis eget urna mollis ornare vel eu leo. Donec ullamcorper nulla</p>
         </div>
         <div>
             <img src="https://lteplova.github.io/netology_lessons/assets/img/icon1.png" alt="Иконка раздела3">
-            <h2>3 Easily Customised</h2>
+            <h2>Easily Customised</h2>
             <p>Car justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis eget urna mollis ornare vel eu leo. Donec ullamcorper nulla</p>
         </div>
         <div>
             <img src="https://lteplova.github.io/netology_lessons/assets/img/icon1.png" alt="Иконка раздела4">
-            <h2>4 Easily Customised</h2>
+            <h2>Easily Customised</h2>
             <p>Car justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis eget urna mollis ornare vel eu leo. Donec ullamcorper nulla</p>
         </div>
         <div>
             <img src="https://lteplova.github.io/netology_lessons/assets/img/icon1.png" alt="Иконка раздела5">
-            <h2>5 Easily Customised</h2>
+            <h2>Easily Customised</h2>
             <p>Car justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis eget urna mollis ornare vel eu leo. Donec ullamcorper nulla</p>
         </div>
         <div>
             <img src="https://lteplova.github.io/netology_lessons/assets/img/icon1.png" alt="Иконка раздела6">
-            <h2>6 Easily Customised</h2>
+            <h2>Easily Customised</h2>
             <p>Car justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis eget urna mollis ornare vel eu leo. Donec ullamcorper nulla</p>
         </div>
     </section>
