--- a/lesson10/lesson10.html
+++ b/lesson10/lesson10.html
@@ -71,7 +71,10 @@
         </div>
     </section>
     <section class=image>
+      <div>
         <img src="https://lteplova.github.io/netology_lessons/assets/img/photo1.jpg" alt="Картинка первого раздела">
+        <div class="img_hover"><strong>Project name</strong>User Interface Design</div>
+      </div>
         <img src="https://lteplova.github.io/netology_lessons/assets/img/photo1.jpg" alt="Картинка второго раздела">
         <img src="https://lteplova.github.io/netology_lessons/assets/img/photo1.jpg" alt="Картинка тртеьего раздела">
         <img src="https://lteplova.github.io/netology_lessons/assets/img/photo1.jpg" alt="Картинка четвертого раздела">
