--- a/lesson10/lesson10.html
+++ b/lesson10/lesson10.html
@@ -15,29 +15,29 @@
             </div>
             <ul class="menu">
                 <li>
-                    <a href="feature.html">feature</a>
+                    <a href="#">feature</a>
                 </li>
                 <li>
-                    <a href="works.html">works</a>
+                    <a href="#">works</a>
                 </li>
                 <li>
-                    <a href="team.html">our team</a>
+                    <a href="#">our team</a>
                 </li>
                 <li>
-                    <a href="testimonials.html">testimonials</a>
+                    <a href="#">testimonials</a>
                 </li>
-                <li><a href="download.html">download</a>
+                <li><a href="#">download</a>
                 </li>
             </ul>
         </div>
     </header>
-        <div class="promo">
-          <div>
+    <div class="promo">
+        <div>
             <h1>You favorite one page multi purpose template</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et.</p>
             <button>Find out more</button>
-            </div>
         </div>
+    </div>
     <section class="mcent">
         <div>
             <img src="https://lteplova.github.io/netology_lessons/assets/img/icon1.png" alt="Иконка раздела1">
@@ -71,14 +71,30 @@
         </div>
     </section>
     <section class=image>
-        <img src="https://lteplova.github.io/netology_lessons/assets/img/photo1.jpg" alt="Картинка первого раздела">
-        <img src="https://lteplova.github.io/netology_lessons/assets/img/photo1.jpg" alt="Картинка второго раздела">
-        <img src="https://lteplova.github.io/netology_lessons/assets/img/photo1.jpg" alt="Картинка тртеьего раздела">
-        <img src="https://lteplova.github.io/netology_lessons/assets/img/photo1.jpg" alt="Картинка четвертого раздела">
-        <img src="https://lteplova.github.io/netology_lessons/assets/img/photo1.jpg" alt="Картинка пятого раздела">
-        <img src="https://lteplova.github.io/netology_lessons/assets/img/photo1.jpg" alt="Картинка шестого раздела">
-        <img src="https://lteplova.github.io/netology_lessons/assets/img/photo1.jpg" alt="Картинка седьмого раздела">
-        <img src="https://lteplova.github.io/netology_lessons/assets/img/photo1.jpg" alt="Картинка восьмого раздела">
+        <div style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/photo1.jpg)">
+            <h5>Project name one <span>User interface design</span></h5>
+        </div>
+        <div style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/photo1.jpg)">
+            <h5>Project name two <span>User interface design</span></h5>
+        </div>
+        <div style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/photo1.jpg)">
+            <h5>Project name three <span>User interface design</span></h5>
+        </div>
+        <div style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/photo1.jpg)">
+            <h5>Project name four <span>User interface design</span></h5>
+        </div>
+        <div style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/photo1.jpg)">
+            <h5>Project name five <span>User interface design</span></h5>
+        </div>
+        <div style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/photo1.jpg)">
+            <h5>Project name six <span>User interface design</span></h5>
+        </div>
+        <div style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/photo1.jpg)">
+            <h5>Project name seven <span>User interface design</span></h5>
+        </div>
+        <div style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/photo1.jpg)">
+            <h5>Project name eight <span>User interface design</span></h5>
+        </div>
     </section>
     <footer>
         <div class="foot1">
@@ -97,10 +113,9 @@
                 <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla metus auctor fringilla</p>
             </div>
         </div>
-        </div>
         <div class="foot2">
-            <p>Copyright 2015 ActiveBox. All Rights Reserved</p>
-            <p>Made with by <span>&#9829 </span><span>Kamal Chanemane</span></p>
+            <p>Copyright &copy; 2015 ActiveBox. All Rights Reserved</p>
+            <p>Made with by <span>&#9829;</span> <span>Kamal Chanemane</span></p>
         </div>
     </footer>
 </body>
