--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -1,23 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  
-  <header class="grey">
-    <div class="logo"></div>
-  </header>
-
-  <div class="promo grey2"></div>
-
-  <section>
-    <ul class="tres">
-      <li class="grey"></li>
-      <li class="grey"></li>
-      <li class="grey"></li>
+    <header class="menu grey">
+        <div class="logo"></div>
+    </header>
+    <div class="promo grey2"></div>
+    <section>
+        <ul class="tres">
+            <li>
+                <img src="icon1.png" height="38" alt="">
+                <h2>Кредитная карта</h2>
+                <p>100 дней</p>
+                <p>не платите процентов</p>
+                <p>0%</p>
+                <p>за снятие наличных до 50 000 ₽</p>
+      <button>Оформить карту</button>
+      </li>
+      <li>
+        <img src="icon2.png" height="38" alt="">
+      <h2>Счет сразу 7</h2>
+      <p>7%</p>
+      <p>всем с первого месяца</p>
+      <p>до 9%</p>
+      <p>новым клиентам</p>
+      <button>Открыть счет</button>
+      </li>
+      <li>
+        <img src="icon3.png" height="38" alt="">
+      <h2>AlfaTravel</h2>
+      <p>до 11%</p>
+      <p>вернем за покупки по карте</p>
+      <p>0%</p>
+      <p>снятие наличных по всему миру</p>
+      <button>Подробнее</button>
+      </li>
     </ul>
   </section>
 
