--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -15,7 +15,7 @@
     <section>
         <ul class="tres">
             <li>
-                <img src="icon1.png" height="38" alt="">
+                <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/icon1.png" class="icons" alt="">
                 <h2>Кредитная карта</h2>
                 <p>100 дней</p>
                 <p>не платите процентов</p>
@@ -24,7 +24,7 @@
       <button>Оформить карту</button>
       </li>
       <li>
-        <img src="icon2.png" height="38" alt="">
+        <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/icon2.png" class="icons" alt="">
       <h2>Счет сразу 7</h2>
       <p>7%</p>
       <p>всем с первого месяца</p>
@@ -33,7 +33,7 @@
       <button>Открыть счет</button>
       </li>
       <li>
-        <img src="icon3.png" height="38" alt="">
+        <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/icon3.png" class="icons" alt="">
       <h2>AlfaTravel</h2>
       <p>до 11%</p>
       <p>вернем за покупки по карте</p>
