--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -3,17 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Альфа-Банк - кредитные и дебетовые карты, кредиты наличными, автокредитование, ипотека и другие банковские услуги физическим и юридическим лицам – Альфа-Банк
+        <</title>
+            <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header class="menu grey">
+    <header class="menu">
         <div class="logo"></div>
     </header>
-    <div class="promo grey2"></div>
+    <div class="promo"></div>
     <section>
-        <ul class="tres">
+        <ul class="hotoffer">
             <li>
                 <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/icon1.png" class="icons" alt="">
                 <h2>Кредитная карта</h2>
@@ -21,47 +22,44 @@
                 <p>не платите процентов</p>
                 <p>0%</p>
                 <p>за снятие наличных до 50 000 ₽</p>
-      <button>Оформить карту</button>
-      </li>
-      <li>
-        <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/icon2.png" class="icons" alt="">
-      <h2>Счет сразу 7</h2>
-      <p>7%</p>
-      <p>всем с первого месяца</p>
-      <p>до 9%</p>
-      <p>новым клиентам</p>
-      <button>Открыть счет</button>
-      </li>
-      <li>
-        <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/icon3.png" class="icons" alt="">
-      <h2>AlfaTravel</h2>
-      <p>до 11%</p>
-      <p>вернем за покупки по карте</p>
-      <p>0%</p>
-      <p>снятие наличных по всему миру</p>
-      <button>Подробнее</button>
-      </li>
-    </ul>
-  </section>
-
-  <section class="grey2"></section>
-
-  <section>
-    <ul class="duos">
-      <li class="grey2"></li>
-      <li class="grey"></li>
-    </ul>
-  </section>
-
-  <section>
-    <ul class="tres">
-      <li class="grey2"></li>
-      <li class="grey2"></li>
-      <li class="grey2"></li>
-    </ul>
-  </section>
-
-  <footer class="grey"></footer>
-
+                <button>Оформить карту</button>
+            </li>
+            <li>
+                <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/icon2.png" class="icons" alt="">
+                <h2>Счет сразу 7</h2>
+                <p>7%</p>
+                <p>всем с первого месяца</p>
+                <p>до 9%</p>
+                <p>новым клиентам</p>
+                <button>Открыть счет</button>
+            </li>
+            <li>
+                <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/icon3.png" class="icons" alt="">
+                <h2>AlfaTravel</h2>
+                <p>до 11%</p>
+                <p>вернем за покупки по карте</p>
+                <p>0%</p>
+                <p>снятие наличных по всему миру</p>
+                <button>Подробнее</button>
+            </li>
+        </ul>
+    </section>
+    <section class="cashback"></section>
+    <section>
+        <ul class="ipoteka">
+            <li class="salary"></li>
+            <li class="calc">
+                <div class="offer"></div>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <ul class="forfamily">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </section>
+    <footer></footer>
 </body>
 </html>
