background-position fix

--- a/diplom/index.html
+++ b/diplom/index.html
@@ -22,31 +22,32 @@
         </div>
     </header>
     <div class="promo">
-      <div class="overlay">
-          <p>Welcome to our studio</p>
-          <h1>It's nice to meet you</h1>
-          <button>Tell me more</button>
-      </div>
+        <div class="overlay">
+            <p>Welcome to our studio</p>
+            <h1>It's nice to meet you!</h1>
+            <button>Tell me more</button>
+        </div>
     </div>
-
+    <section class="services">
+        <h2>Servives</h2>
+        <p>Proin iaculis purus consequat sem sure</p>
+    </section>
     <section>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio autem eligendi repellendus impedit eaque voluptatem nam numquam eum! Beatae iure similique reprehenderit repudiandae voluptatum nemo eveniet amet dignissimos, natus voluptates.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, ab veniam animi eligendi sit minus facilis vero nihil totam cum optio, nostrum natus ducimus amet necessitatibus laudantium, ratione magnam assumenda!</p>
-
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, ab veniam animi eligendi sit minus facilis vero nihil totam cum optio, nostrum natus ducimus amet necessitatibus laudantium, ratione magnam assumenda!</p>
-
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, ab veniam animi eligendi sit minus facilis vero nihil totam cum optio, nostrum natus ducimus amet necessitatibus laudantium, ratione magnam assumenda!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, ab veniam animi eligendi sit minus facilis vero nihil totam cum optio, nostrum natus ducimus amet necessitatibus laudantium, ratione magnam assumenda!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, ab veniam animi eligendi sit minus facilis vero nihil totam cum optio, nostrum natus ducimus amet necessitatibus laudantium, ratione magnam assumenda!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, ab veniam animi eligendi sit minus facilis vero nihil totam cum optio, nostrum natus ducimus amet necessitatibus laudantium, ratione magnam assumenda!</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, ab veniam animi eligendi sit minus facilis vero nihil totam cum optio, nostrum natus ducimus amet necessitatibus laudantium, ratione magnam assumenda!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, ab veniam animi eligendi sit minus facilis vero nihil totam cum optio, nostrum natus ducimus amet necessitatibus laudantium, ratione magnam assumenda!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, ab veniam animi eligendi sit minus facilis vero nihil totam cum optio, nostrum natus ducimus amet necessitatibus laudantium, ratione magnam assumenda!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, ab veniam animi eligendi sit minus facilis vero nihil totam cum optio, nostrum natus ducimus amet necessitatibus laudantium, ratione magnam assumenda!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, ab veniam animi eligendi sit minus facilis vero nihil totam cum optio, nostrum natus ducimus amet necessitatibus laudantium, ratione magnam assumenda!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, ab veniam animi eligendi sit minus facilis vero nihil totam cum optio, nostrum natus ducimus amet necessitatibus laudantium, ratione magnam assumenda!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, ab veniam animi eligendi sit minus facilis vero nihil totam cum optio, nostrum natus ducimus amet necessitatibus laudantium, ratione magnam assumenda!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, ab veniam animi eligendi sit minus facilis vero nihil totam cum optio, nostrum natus ducimus amet necessitatibus laudantium, ratione magnam assumenda!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, ab veniam animi eligendi sit minus facilis vero nihil totam cum optio, nostrum natus ducimus amet necessitatibus laudantium, ratione magnam assumenda!</p>
+        <div class="icons">
+            <div class="icon1"></div>
+            <h2>Commerce</h2>
+            <p></p>
+        </div>
+        <div>
+            <div class="icon2"></div>
+            <h2>Responsive Web</h2>
+            <p></p>
+        </div>
+        <div>
+            <div class="icon3"></div>
+            <h2>Web Security</h2>
+            <p></p>
+        </div>
     </section>
 </body>
 
