--- a/diplom/index.html
+++ b/diplom/index.html
@@ -14,7 +14,7 @@
             <div class=logo>Golden</div>
             <ul class=menu>
                 <li> <a href="#">Home</a></li>
-                <li> <a href="#">Service</a></li>
+                <li> <a href="#">Services</a></li>
                 <li> <a href="#">Portfolio</a></li>
                 <li> <a href="#">About</a></li>
                 <li> <a href="#">Contact</a></li>
@@ -23,32 +23,139 @@
     </header>
     <div class="promo">
         <div class="overlay">
-            <p>Welcome to our studio</p>
-            <h1>It's nice to meet you!</h1>
+            <p>Welcome to our studio!</p>
+            <h1>It's nice to meet you</h1>
             <button>Tell me more</button>
         </div>
     </div>
-    <section class="services">
-        <h2>Servives</h2>
-        <p>Proin iaculis purus consequat sem sure</p>
+    <section>
+        <div>
+            <h2>Services</h2>
+            <p>Proin iaculis purus consequat sem cure. </p>
+        </div>
+        <div class="blocks">
+            <div class="icons icon1"></div>
+            <h2>E-Commerce</h2>
+            <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+        </div>
+        <div class="blocks">
+            <div class="icons icon2"></div>
+            <h2>Responsive Web</h2>
+            <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+        </div>
+        <div class="blocks">
+            <div class="icons icon3"></div>
+            <h2>Web Security</h2>
+            <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+        </div>
+    </section>
+    <section class="headgallery">
+        <div>
+            <h2>Our PortFolio</h2>
+            <p>Proin iaculis purus consequat sem cure </p>
+        </div>
+        <div class="wrapper">
+            <div class="gallery">
+                <div style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/portf01.jpg)"></div>
+                <h2>Ebony & Ivory</h2>
+                <p>Branding</p>
+            </div>
+            <div class="gallery">
+                <div style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/portf02.jpg"></div>
+                <h2>Smart Stationary</h2>
+                <p>Print Design</p>
+            </div>
+            <div class="gallery">
+                <div style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/portf03.jpg"></div>
+                <h2>Clever Poster</h2>
+                <p>Print Design</p>
+            </div>
+            <div class="gallery">
+                <div style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/portf04.jpg"></div>
+                <h2>Vinyl Record</h2>
+                <p>Product Mock-Up</p>
+            </div>
+            <div class="gallery">
+                <div style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/portf05.jpg"></div>
+                <h2>Treehouse Template</h2>
+                <p>Web Design</p>
+            </div>
+            <div class="gallery">
+                <div style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/portf06.jpg"></div>
+                <h2>Burned Logo</h2>
+                <p>Branding</p>
+            </div>
+        </div>
     </section>
     <section>
-        <div class="icons">
-            <div class="icon1"></div>
-            <h2>Commerce</h2>
-            <p></p>
-        </div>
         <div>
-            <div class="icon2"></div>
-            <h2>Responsive Web</h2>
-            <p></p>
+            <h2>About Us</h2>
+            <p>Proin iaculis purus consequat sem cure.</p>
         </div>
+        <div class="wrapper">
+            <div class="about left">
+                <h2>July 2010</h2>
+                <h3>Our Humble Beginnings</h3>
+                <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
+            </div>
+            <div class="roundpic" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/about01.jpg"></div>
+            <div class="about right"></div>
+        </div>
+        <div class="vline wrapper"></div>
+        <div class="wrapper">
+            <div class="about left">
+            </div>
+            <div class="roundpic" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/about02.jpg"></div>
+            <div class="about right">
+                <h2>January 2011</h2>
+                <h3>Facing Startup Battles</h3>
+                <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
+            </div>
+        </div>
+        <div class="vline wrapper"></div>
+        <div class="wrapper">
+            <div class="about left">
+                <h2>December 2012</h2>
+                <h3>Enter The Dark Days</h3>
+                <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
+            </div>
+            <div class="roundpic" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/about03.jpg"></div>
+            <div class="about right"></div>
+        </div>
+        <div class="vline wrapper"></div>
+        <div class="wrapper">
+            <div class="about left">
+            </div>
+            <div class="roundpic" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/about04.jpg"></div>
+            <div class="about right">
+                <h2>february 2014</h2>
+                <h3>Our Triumph</h3>
+                <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
+            </div>
+        </div>
+        <div class="vline wrapper"></div>
+        <div class="wrapper roundpic last">Our Story Continues ...</div>
+    </section>
+    <section>
         <div>
-            <div class="icon3"></div>
-            <h2>Web Security</h2>
-            <p></p>
+            <h2>our amazing team</h2>
+            <p>Proin iaculis purus consequat sem cure.</p>
+        </div>
+        <div class="roundpic"></div>
+        <div>
         </div>
     </section>
+
+
+    <div class="socicon">
+      <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/Twitter1.png" alt="">
+    </div>
+    <div class="socicon">
+      <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/Facebook1.png" alt="">
+    </div>
+    <div class="socicon">
+      <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/Pinterest1.png" alt="">
+    </div>
 </body>
 
 </html>
