--- a/diplom/index.html
+++ b/diplom/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class=center>
-            <div class=logo>Golden</div>
+            <div><a class=logo href="#">Golden</a></div>
             <ul class=menu>
                 <li> <a href="#">Home</a></li>
                 <li> <a href="#">Services</a></li>
