--- a/diplom/index.html
+++ b/diplom/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en ru">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -29,31 +29,29 @@
         </div>
     </div>
     <section>
-        <div>
-            <h2>Services</h2>
-            <p>Proin iaculis purus consequat sem cure. </p>
-        </div>
-        <div class="blocks">
-            <div class="icons icon1"></div>
-            <h2>E-Commerce</h2>
-            <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
-        </div>
-        <div class="blocks">
-            <div class="icons icon2"></div>
-            <h2>Responsive Web</h2>
-            <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
-        </div>
-        <div class="blocks">
-            <div class="icons icon3"></div>
-            <h2>Web Security</h2>
-            <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+        <h2>Services</h2>
+        <p>Proin iaculis purus consequat sem cure. </p>
+        <div class="wrapper">
+            <div class="blocks">
+                <div class="icons icon1"></div>
+                <h2>E-Commerce</h2>
+                <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+            </div>
+            <div class="blocks">
+                <div class="icons icon2"></div>
+                <h2>Responsive Web</h2>
+                <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+            </div>
+            <div class="blocks">
+                <div class="icons icon3"></div>
+                <h2>Web Security</h2>
+                <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
+            </div>
         </div>
     </section>
     <section class="headgallery">
-        <div>
-            <h2>Our PortFolio</h2>
-            <p>Proin iaculis purus consequat sem cure </p>
-        </div>
+        <h2>Our PortFolio</h2>
+        <p>Proin iaculis purus consequat sem cure </p>
         <div class="wrapper">
             <div class="gallery">
                 <div style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/portf01.jpg)"></div>
@@ -88,10 +86,8 @@
         </div>
     </section>
     <section>
-        <div>
-            <h2>About Us</h2>
-            <p>Proin iaculis purus consequat sem cure.</p>
-        </div>
+        <h2>About Us</h2>
+        <p>Proin iaculis purus consequat sem cure.</p>
         <div class="wrapper">
             <div class="about left">
                 <h2>July 2010</h2>
@@ -101,7 +97,7 @@
             <div class="roundpic" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/about01.jpg"></div>
             <div class="about right"></div>
         </div>
-        <div class="vline wrapper"></div>
+        <div class="vline"></div>
         <div class="wrapper">
             <div class="about left">
             </div>
@@ -112,7 +108,7 @@
                 <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
             </div>
         </div>
-        <div class="vline wrapper"></div>
+        <div class="vline"></div>
         <div class="wrapper">
             <div class="about left">
                 <h2>December 2012</h2>
@@ -122,7 +118,7 @@
             <div class="roundpic" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/about03.jpg"></div>
             <div class="about right"></div>
         </div>
-        <div class="vline wrapper"></div>
+        <div class="vline"></div>
         <div class="wrapper">
             <div class="about left">
             </div>
@@ -133,48 +129,81 @@
                 <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.</p>
             </div>
         </div>
-        <div class="vline wrapper"></div>
-        <div class="wrapper roundpic last">Our Story Continues ...</div>
+        <div class="vline"></div>
+        <div class="roundpic last">Our Story Continues ...</div>
     </section>
     <section class="container_team">
-        <div>
-            <h2>our amazing team</h2>
-            <p>Proin iaculis purus consequat sem cure.</p>
-        </div>
-        <div class="team">
-            <div class="photo_team"></div>
-            <h3>Kimberly Thompson</h3>
-            <h4>Marketer</h4>
-            <div>
-                <div class="socicon twitter" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+        <h2>our amazing team</h2>
+        <p>Proin iaculis purus consequat sem cure.</p>
+        <div class="wrapper">
+            <div class="team">
+                <div class="photo_team"></div>
+                <h3>Kimberly Thompson</h3>
+                <h4>Marketer</h4>
+                <div>
+                    <div class="socicon twitter" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                    <div class="socicon fb" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                    <div class="socicon pint" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                </div>
+            </div>
+            <div class="team">
+                <div class="photo_team"></div>
+                <h3>Rico Massimo</h3>
+                <h4>Coder</h4>
+                <div>
+                    <div class="socicon twitter" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                    <div class="socicon fb" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                    <div class="socicon gp" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                </div>
+            </div>
+            <div class="team">
+                <div class="photo_team"></div>
+                <h3>Uku Mason</h3>
+                <h4>Graphic Designer</h4>
                 <div class="socicon fb" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
                 <div class="socicon pint" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
             </div>
+            <p class="team_memo">Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt proin iaculis.</p>
         </div>
+    </section>
+    <section class="partners">
+        <div class="wrapper">
+            <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/partner1.png" alt="">
+            <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/partner2.png" alt="">
+            <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/partner3.png" alt="">
+            <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/partner4.png" alt="">
         </div>
-        <div class="team">
-            <div class="photo_team"></div>
-            <h3>Rico Massimo</h3>
-            <h4>Coder</h4>
-            <div>
+    </section>
+    <section class="contact">
+        <h2>Contact us</h2>
+        <p>Proin iaculis purus consequat sem cure</p>
+        <div class="wrapper">
+            <div class="col50">
+                <input type="text" tabindex="1" placeholder="Your name*">
+                <input type="text" tabindex="2" placeholder="Your e-mail*">
+                <input type="text" tabindex="3" placeholder="Subject">
+            </div>
+            <div class="col50">
+                <textarea tabindex="4" placeholder="Your message*"></textarea>
+            </div>
+            <button tabindex="5">Send message</button>
+        </div>
+    </section>
+    <footer>
+        <div class="wrapper">
+            <div class="left">
+                © Copyright 2014 FreebiesXpress.com
+            </div>
+            <div class="social">
                 <div class="socicon twitter" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
                 <div class="socicon fb" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                <div class="socicon pint" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
                 <div class="socicon gp" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
             </div>
+            <div class="right">
+            </div>
         </div>
-        <div class="team">
-            <div class="photo_team"></div>
-            <h3>Uku Mason</h3>
-            <h4>Graphic Designer</h4>
-            <div class="socicon fb" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
-            <div class="socicon pint" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
-
-        </div>
-        <p class="wrapper team_memo">Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt proin iaculis.</p>
-        
-
-    </section>
-
+    </footer>
 </body>
 
 </html>
