--- a/diplom/index.html
+++ b/diplom/index.html
@@ -191,9 +191,7 @@
     </section>
     <footer>
         <div class="wrapper">
-            <div class="left">
-                © Copyright 2014 FreebiesXpress.com
-            </div>
+            <div class="left">© Copyright 2014 FreebiesXpress.com</div>
             <div class="social">
                 <div class="socicon twitter" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
                 <div class="socicon fb" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
