--- a/diplom/index.html
+++ b/diplom/index.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Cookie|Montserrat:400,700|Roboto+Slab|Vollkorn:400i" rel="stylesheet">
+ <!--    <link href="https://fonts.googleapis.com/css?family=Cookie|Montserrat:400,700|Roboto+Slab|Vollkorn:400i" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Vollkorn:400i" rel="stylesheet">
     <title>Дипломная работа</title>
 </head>
 
@@ -141,9 +145,15 @@
                 <h3>Kimberly Thompson</h3>
                 <h4>Marketer</h4>
                 <div>
-                    <div class="socicon twitter" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
-                    <div class="socicon fb" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
-                    <div class="socicon pint" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                    <a href="#">
+                        <div class="socicon twitter" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                    </a>
+                    <a href="#">
+                        <div class="socicon fb" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                    </a>
+                    <a href="#">
+                        <div class="socicon pint" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                    </a>
                 </div>
             </div>
             <div class="team">
@@ -151,29 +161,39 @@
                 <h3>Rico Massimo</h3>
                 <h4>Coder</h4>
                 <div>
-                    <div class="socicon twitter" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
-                    <div class="socicon fb" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
-                    <div class="socicon gp" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                    <a href="#">
+                        <div class="socicon twitter" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                    </a>
+                    <a href="#">
+                        <div class="socicon fb" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                    </a>
+                    <a href="#">
+                        <div class="socicon gp" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                    </a>
                 </div>
             </div>
             <div class="team">
                 <div class="photo_team"></div>
                 <h3>Uku Mason</h3>
                 <h4>Graphic Designer</h4>
-                <div class="socicon fb" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
-                <div class="socicon pint" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                <a href="#">
+                    <div class="socicon fb" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                </a>
+                <a href="#">
+                    <div class="socicon pint" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                </a>
             </div>
             <p class="team_memo">Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt proin iaculis.</p>
         </div>
     </section>
-    <section class="partners">
+    <div class="partners">
         <div class="wrapper">
-            <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/partner1.png" alt="">
-            <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/partner2.png" alt="">
-            <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/partner3.png" alt="">
-            <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/partner4.png" alt="">
+            <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/partner1.png" alt="envato">
+            <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/partner2.png" alt="wordpress">
+            <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/partner3.png" alt="aetuts">
+            <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/partner4.png" alt="microlancer">
         </div>
-    </section>
+    </div>
     <section class="contact">
         <h2>Contact us</h2>
         <p>Proin iaculis purus consequat sem cure</p>
@@ -193,10 +213,18 @@
         <div class="wrapper">
             <div class="left">© Copyright 2014 FreebiesXpress.com</div>
             <div class="social">
-                <div class="socicon twitter" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
-                <div class="socicon fb" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
-                <div class="socicon pint" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
-                <div class="socicon gp" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                <a href="#">
+                    <div class="socicon twitter" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                </a>
+                <a href="#">
+                    <div class="socicon fb" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                </a>
+                <a href="#">
+                    <div class="socicon pint" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                </a>
+                <a href="#">
+                    <div class="socicon gp" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/ss-sprite.png"></div>
+                </a>
             </div>
             <div class="right">
             </div>
