--- a/diplom/index1.html
+++ b/diplom/index1.html
@@ -16,7 +16,7 @@
   <header class="header">
     <div class="center">
       <a class="logo" href="#">Golden</a>
-      <ul class="block_menu">
+      <ul class="menu">
         <li class="menu-item"><a class="menu-link" href="#">Home</a></li>
         <li class="menu-item"><a class="menu-link" href="#">Services</a></li>
         <li class="menu-item"><a class="menu-link" href="#">Portfolio</a></li>
@@ -110,7 +110,9 @@
     <h2>About Us</h2>
     <p>Proin iaculis purus consequat sem cure.</p>
     <div class="wrapper">
+      <div class="vert_line"></div>
       <div class="about left">
+      <div class="left">
         <h2>July 2010</h2>
         <h3>Our Humble Beginnings</h3>
         <p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus
@@ -118,7 +120,8 @@
           entum suscipit.</p>
       </div>
       <div class="roundpic" style="background-image: url(https://lteplova.github.io/netology_lessons/assets/img/alfa/about01.jpg"></div>
-      <div class="about right"></div>
+      </div>
+     <!--  <div class="about right"></div> -->
     </div>
     <div class="vline"></div>
     <div class="wrapper">
@@ -225,10 +228,12 @@
       <a href="#" target="_blank">
         <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/partner1.png" alt="envato">
       </a>
-      <!-- и так дальше добавить -->
-      <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/partner2.png" alt="wordpress">
-      <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/partner3.png" alt="aetuts">
-      <img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/partner4.png" alt="microlancer">
+      <a href="#" target="_blank"><img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/partner2.png" alt="wordpress">
+      </a>
+      <a href="#" target="_blank"><img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/partner3.png" alt="aetuts">
+      </a>
+      <a href="#" target="_blank"><img src="https://lteplova.github.io/netology_lessons/assets/img/alfa/partner4.png" alt="microlancer">
+      </a>
     </div>
   </section>
 
@@ -256,7 +261,7 @@
     </div>
   </section>
 
-  <footer class="footer-container">
+  <footer class="footer">
     <div class="wrapper">
       <div class="footer-copyright">&copy; Copyright 2014 FreebiesXpress.com</div>
       <div class="footer-social">
